@startuml

hide circle
skinparam classAttributeIconSize 0

    class TutorialClass {
        +getStartTime(): LocalTime
        +getStudentList(): StudentList
        +getTutorialName(): String

    }

    class TutorialClassList {
        - tutorialClasses : ArrayList<TutorialClass>
        +getTutorialByName(name: String): TutorialClass
        +getTutorialClasses(): ArrayList<TutorialClass>
    }

    class Student {

        +setRemark(remark: String): void
        +getRemark(): String
        +getName(): String
        +getMatricNumber(): String
    }

    class StudentList {
        +getStudentByMatricNumber(matricNumber: String): Student
        +removeStudent(student: Student): void
        +getStudents(): ArrayList<Student>
    }




TutorialClassList "1" *-- "*" TutorialClass : contains
TutorialClass "1" *-- "1" StudentList : contains
StudentList "1" *-- "*" Student : contains



@enduml